--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,15 +5,21 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
         {% endblock %}
         <link rel="stylesheet" href="{{asset("css/style.css")}}">
         <script defer src="{{asset("js/script.js")}}"></script>
 
         {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% include 'parts/header-menu.html.twig' %}
+        {% block body %}
+        <h1>Hello world!</h1>
+        {% endblock %}
+        {% include 'parts/footer-menu.html.twig' %}
     </body>
 </html>
