--- a/templates/parts/header-menu.html.twig
+++ b/templates/parts/header-menu.html.twig
@@ -13,8 +13,13 @@
       <a href="#" class="text-sm/6 font-semibold text-gray-900">Company</a>
     </div>
     <div class="flex flex-1 items-center justify-end gap-x-6">
-      <a href="#" class="hidden text-sm/6 font-semibold text-gray-900 lg:block">Log in</a>
-      <a href="#" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Sign up</a>
+    {% if app.user %}
+        <a href="">Bonjour {{ app.user.firstname }} !</a>
+        <a href="#" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">log out</a>
+    {% else %}
+        <a href="#" class="hidden text-sm/6 font-semibold text-gray-900 lg:block">Log in</a>
+        <a href="#" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Sign up</a>
+    {% endif %}
     </div>
     <div class="flex lg:hidden">
       <button type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700">
