--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,20 +3,9 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-    {% for abonnement in abonnements %}
-        <li>
-            <strong>{{ abonnement.title }}</strong> <br>
-            Prix : {{ abonnement.price }} € <br>
-            Durée : {{ abonnement.duration }} mois <br>
-            Description : {{ abonnement.description }}
-            options : <br>
-            {% for feature in abonnement.feature %}
-                <ul>
-                    <li>{{ feature }}</li>
-                </ul>
-            {% endfor %}
-        </li>
+    {% if app.user %}
+        {% include 'parts/abonnements/abonnement.html.twig' %}
     {% else %}
-        <p>Aucun abonnement disponible.</p>
-    {% endfor %}
+        <h1>Vous n'êtes pas connecté</h1>
+    {% endif %}
 {% endblock %}
