--- a/templates/parts/header-menu.html.twig
+++ b/templates/parts/header-menu.html.twig
@@ -1,7 +1,7 @@
 <header class="bg-white">
   <nav class="mx-auto flex max-w-7xl items-center justify-between gap-x-6 p-6 lg:px-8" aria-label="Global">
     <div class="flex lg:flex-1">
-      <a href="#" class="-m-1.5 p-1.5">
+      <a href="{{ path('Homepage') }}" class="-m-1.5 p-1.5">
         <span class="sr-only">Your Company</span>
         <img class="h-8 w-auto" src="https://tailwindui.com/plus/img/logos/mark.svg?color=indigo&shade=600" alt="">
       </a>
@@ -14,7 +14,7 @@
     </div>
     <div class="flex flex-1 items-center justify-end gap-x-6">
     {% if app.user %}
-        <a href="">Bonjour {{ app.user.firstname }} !</a>
+        <a href="">Bonjour {{ app.user.username }} !</a>
         <a href="#" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">log out</a>
     {% else %}
         <a href="#" class="hidden text-sm/6 font-semibold text-gray-900 lg:block">Log in</a>
