--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -34,4 +34,7 @@
         Sign in
     </button>
 </form>
+{% if error %}
+    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+{% endif %}
 {% endblock %}
