--- a/templates/abonnement/index.html.twig
+++ b/templates/abonnement/index.html.twig
@@ -1,20 +1,43 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AbonnementController!{% endblock %}
+{% block title %}Abonnement index{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>Abonnement index</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Title</th>
+                <th>Price</th>
+                <th>Duration</th>
+                <th>Description</th>
+                <th>Feature</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for abonnement in abonnements %}
+            <tr>
+                <td>{{ abonnement.id }}</td>
+                <td>{{ abonnement.title }}</td>
+                <td>{{ abonnement.price }}</td>
+                <td>{{ abonnement.duration }}</td>
+                <td>{{ abonnement.description }}</td>
+                <td>{{ abonnement.feature ? abonnement.feature|json_encode : '' }}</td>
+                <td>
+                    <a href="{{ path('app_abonnement_show', {'id': abonnement.id}) }}">show</a>
+                    <a href="{{ path('app_abonnement_edit', {'id': abonnement.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="7">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/Users/alexandrepumpalovic/Desktop/DEV/Sandbox/symfony/ZSport/src/Controller/AbonnementController.php</code></li>
-        <li>Your template at <code>/Users/alexandrepumpalovic/Desktop/DEV/Sandbox/symfony/ZSport/templates/abonnement/index.html.twig</code></li>
-    </ul>
-</div>
+    <a href="{{ path('app_abonnement_new') }}">Create new</a>
 {% endblock %}
