--- a/templates/challenge/index.html.twig
+++ b/templates/challenge/index.html.twig
@@ -1,20 +1,41 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ChallengeController!{% endblock %}
+{% block title %}Challenge index{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>Challenge index</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Goal</th>
+                <th>StartDate</th>
+                <th>EndDate</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for challenge in challenges %}
+            <tr>
+                <td>{{ challenge.id }}</td>
+                <td>{{ challenge.name }}</td>
+                <td>{{ challenge.goal }}</td>
+                <td>{{ challenge.startDate ? challenge.startDate|date('Y-m-d') : '' }}</td>
+                <td>{{ challenge.endDate ? challenge.endDate|date('Y-m-d') : '' }}</td>
+                <td>
+                    <a href="{{ path('app_challenge_show', {'id': challenge.id}) }}">show</a>
+                    <a href="{{ path('app_challenge_edit', {'id': challenge.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="6">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/Users/alexandrepumpalovic/Desktop/DEV/Sandbox/symfony/ZSport/src/Controller/ChallengeController.php</code></li>
-        <li>Your template at <code>/Users/alexandrepumpalovic/Desktop/DEV/Sandbox/symfony/ZSport/templates/challenge/index.html.twig</code></li>
-    </ul>
-</div>
+    <a href="{{ path('app_challenge_new') }}">Create new</a>
 {% endblock %}
