--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     {% if app.user %}
         {% if app.user.isVerified %}
-            {% include 'parts/abonnements/abonnement.html.twig' %}
+            {% include 'parts/video/list-video.html.twig' %}
         {% else %}
             <div class="alert alert-danger" role="alert">
                 Merci de vérifier votre adresse email pour accéder à toutes les fonctionnalités du site.
@@ -13,7 +13,15 @@
             </div>
         {% endif %}
     {% else %}
-        <h1>Vous n'êtes pas connecté</h1>
-        <p><a href="{{ path('app_login') }}">Connectez-vous</a> ou <a href="{{ path('app_register') }}">inscrivez-vous</a> pour accéder à toutes les fonctionnalités.</p>
+        {% include 'parts/abonnements/abonnement.html.twig' %}
+        <div class="bg-white">
+            <div class="mx-auto max-w-7xl px-6 py-24 sm:py-32 lg:px-8">
+                <h2 class="max-w-2xl text-4xl font-semibold tracking-tight text-balance text-gray-900 sm:text-5xl">Inscrivez vous pour accéder a toutes les fonctionnalités de Zsport</h2>
+                <div class="mt-10 flex items-center gap-x-6">
+                <a href="{{ path('app_register') }}" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">S'inscrire</a>
+                <a href="{{ path('app_login') }}" class="text-sm/6 font-semibold text-gray-900">Se connecter<span aria-hidden="true">→</span></a>
+                </div>
+            </div>
+        </div>
     {% endif %}
 {% endblock %}
