--- a/templates/parts/abonnements/abonnement-card.html.twig
+++ b/templates/parts/abonnements/abonnement-card.html.twig
@@ -1,40 +1,23 @@
-<div class="-m-2 grid grid-cols-1 rounded-[2rem] shadow-[inset_0_0_2px_1px_#ffffff4d] ring-1 ring-black/5 max-lg:mx-auto max-lg:w-full max-lg:max-w-md">
-    <div class="grid grid-cols-1 rounded-[2rem] p-2 shadow-md shadow-black/5">
-    {% if abonnementUser is not null %} 
-        {% if abonnementUser.id == abonnement.id %}
-            <div class="rounded-3xl bg-indigo-100 p-10 pb-9 shadow-2xl ring-1 ring-black/5">
-                <h2 class="text-sm font-semibold text-indigo-800">votre abonnement </h2>
-        {% else %}
-            <div class="rounded-3xl bg-white p-10 pb-9 shadow-2xl ring-1 ring-black/5">
-        {% endif %}
-    {% endif %}
-                <h2 class="text-sm font-semibold text-indigo-600">{{abonnement.title}}<span class="sr-only">plan</span></h2>
-                <p class="mt-2 text-pretty text-sm/6 text-gray-600">{{abonnement.description}}</p>
-                <div class="mt-8 flex items-center gap-4">
-                <div class="text-5xl font-semibold text-gray-950">{{abonnement.price}}€</div>
-                <div class="text-sm text-gray-600">
-                    <p>Euro</p>
-                    <p>pour {{ abonnement.duration }} mois</p>
-                </div>
-                </div>
-                <div class="mt-8">
-                <a href="#" aria-label="Start a free trial on the Starter plan" class="inline-block rounded-md bg-indigo-600 px-3.5 py-2 text-center text-sm/6 font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Start a free trial</a>
-                </div>
-                <div class="mt-8">
-                    <h3 class="text-sm/6 font-medium text-gray-950">Avantage de l'abonnement:</h3>
-                    <ul class="mt-3 space-y-3">
-                        {% for feature in abonnement.feature %}
-                            <li class="group flex items-start gap-4 text-sm/6 text-gray-600 data-[disabled]:text-gray-400">
-                            <span class="inline-flex h-6 items-center">
-                                <svg class="size-4 fill-gray-400 group-data-[disabled]:fill-gray-300" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true" data-slot="icon">
-                                <path d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5v-3.5Z" />
-                                </svg>
-                            </span>
-                            {{ feature }}
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
+<div class="rounded-3xl p-8 ring-1 ring-white/10 xl:p-10">
+    <div class="flex items-center justify-between gap-x-4">
+        <h3 id="tier-freelancer" class="text-lg/8 font-semibold text-white">{{abonnement.title}}</h3>
     </div>
+    <p class="mt-4 text-sm/6 text-white">{{abonnement.description}}</p>
+    <p class="mt-6 flex items-baseline gap-x-1">
+    <!-- Price, update based on frequency toggle state -->
+    <span class="text-4xl font-semibold tracking-tight text-white">{{abonnement.price}}€</span>
+    <!-- Payment frequency, update based on frequency toggle state -->
+    <span class="text-sm/6 font-semibold text-white">/mois</span>
+    </p>
+    <a href="#" aria-describedby="tier-freelancer" class="mt-6 block rounded-md bg-white/10 px-3 py-2 text-center text-sm/6 font-semibold text-white hover:bg-white/20 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">Choisir cet abonnement</a>
+    <ul role="list" class="mt-8 space-y-3 text-sm/6 text-gray-300 xl:mt-10">
+    {% for feature in abonnement.feature %}
+        <li class="flex gap-x-3 text-white">
+            <svg class="h-6 w-5 flex-none text-white" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
+            <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" />
+            </svg>
+            {{feature}}
+        </li>
+    {% endfor %}
+    </ul>
 </div>
