--- a/templates/parts/abonnements/abonnement.html.twig
+++ b/templates/parts/abonnements/abonnement.html.twig
@@ -1,16 +1,14 @@
-<div class="bg-white py-24 sm:py-32">
-  <div class="mx-auto max-w-4xl px-6 max-lg:text-center lg:max-w-7xl lg:px-8">
-    <h1 class="text-balance text-5xl font-semibold tracking-tight text-gray-950 sm:text-6xl lg:text-pretty">Pricing that grows with your team size</h1>
-    <p class="mt-6 max-w-2xl text-pretty text-lg font-medium text-gray-600 max-lg:mx-auto sm:text-xl/8">Choose an affordable plan that’s packed with the best features for engaging your audience, creating customer loyalty, and driving sales.</p>
-  </div>
-  <div class="relative pt-16 sm:pt-24">
-    <div class="absolute inset-x-0 bottom-0 top-48 bg-[radial-gradient(circle_at_center_center,#7775D6,#592E71,#030712_70%)] lg:bg-[radial-gradient(circle_at_center_150%,#7775D6,#592E71,#030712_70%)]"></div>
-      <div class="relative mx-auto max-w-2xl px-6 lg:max-w-7xl lg:px-8">
-        <div class="grid grid-cols-1 gap-10 lg:grid-cols-3">
-          {% for abonnement in abonnements %}
-            {{ include('parts/abonnements/abonnement-card.html.twig') }}
-          {% endfor %}
-        </div>
+<div class="bg-gray-900 py-24 sm:py-32">
+    <div class="mx-auto max-w-7xl px-6 lg:px-8">
+      <div class="mx-auto max-w-4xl text-center">
+        <h2 class="text-base/7 font-semibold text-indigo-400">Pricing</h2>
+        <p class="mt-2 text-5xl font-semibold tracking-tight text-balance text-white sm:text-6xl">Pricing that grows with you</p>
       </div>
-  </div>
+      <p class="mx-auto mt-6 max-w-2xl text-center text-lg font-medium text-pretty text-gray-400 sm:text-xl/8">Choose an affordable plan that’s packed with the best features for engaging your audience, creating customer loyalty, and driving sales.</p>
+      <div class="isolate mx-auto mt-10 grid max-w-md grid-cols-1 gap-8 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+        {% for abonnement in abonnements %}
+          {{ include('parts/abonnements/abonnement-card.html.twig') }}
+        {% endfor %}
+      </div>  
+    </div>
 </div>
