--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,20 +7,87 @@
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
 
-    <h1>Register</h1>
-
     {{ form_errors(registrationForm) }}
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.firstName) }}
-        {{ form_row(registrationForm.lastName) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.sex) }}
-        {{ form_row(registrationForm.birthDate) }}
-        {{ form_row(registrationForm.username) }}
-        {{ form_row(registrationForm.plainPassword) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-        
-        <button type="submit" class="btn">S'inscrire</button>
+    <div class=" w-8/12 sm:w-80 m-auto p-4 border-2 rounded-lg">
+        {{ form_start(registrationForm, {'attr': {'class': 'space-y-6'}}) }}
+      
+      <div>
+        {{ form_label(registrationForm.firstName, null, {'label_attr': {'class': 'block text-sm font-medium text-gray-900'}}) }}
+        <div class="mt-2">
+          {{ form_widget(registrationForm.firstName, {'attr': {'class': 'border-2 block w-full rounded-md bg-white px-3 py-2 text-base text-gray-900 outline-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:outline-indigo-600 sm:text-sm'}}) }}
+          {{ form_errors(registrationForm.firstName, {'attr': {'class': 'text-red-600 text-sm'}}) }}
+        </div>
+      </div>
+      
+      <div>
+        {{ form_label(registrationForm.lastName, null, {'label_attr': {'class': 'block text-sm font-medium text-gray-900'}}) }}
+        <div class="mt-2">
+          {{ form_widget(registrationForm.lastName, {'attr': {'class': 'border-2 block w-full rounded-md bg-white px-3 py-2 text-base text-gray-900 outline-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:outline-indigo-600 sm:text-sm'}}) }}
+          {{ form_errors(registrationForm.lastName, {'attr': {'class': 'text-red-600 text-sm'}}) }}
+        </div>
+      </div>
+      
+      <div>
+        {{ form_label(registrationForm.email, null, {'label_attr': {'class': 'block text-sm font-medium text-gray-900'}}) }}
+        <div class="mt-2">
+          {{ form_widget(registrationForm.email, {'attr': {'type': 'email', 'class': 'border-2 block w-full rounded-md bg-white px-3 py-2 text-base text-gray-900 outline-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:outline-indigo-600 sm:text-sm'}}) }}
+          {{ form_errors(registrationForm.email, {'attr': {'class': 'text-red-600 text-sm'}}) }}
+        </div>
+      </div>
+      
+      <div>
+        {{ form_label(registrationForm.sex, null, {'label_attr': {'class': 'block text-sm font-medium text-gray-900'}}) }}
+        <div class="mt-2">
+          {{ form_widget(registrationForm.sex, {'attr': {'class': 'border-2 block w-full rounded-md bg-white px-3 py-2 text-base text-gray-900 outline-1 outline-gray-300 focus:outline-2 focus:outline-indigo-600 sm:text-sm'}}) }}
+          {{ form_errors(registrationForm.sex, {'attr': {'class': 'text-red-600 text-sm'}}) }}
+        </div>
+      </div>
+      
+      <div>
+        {{ form_label(registrationForm.birthDate, null, {'label_attr': {'class': 'block text-sm font-medium text-gray-900'}}) }}
+        <div class="mt-2">
+          {{ form_widget(registrationForm.birthDate, {'attr': {'type': 'date', 'class': 'border-2 block w-full rounded-md bg-white px-3 py-2 text-base text-gray-900 outline-1 outline-gray-300 focus:outline-2 focus:outline-indigo-600 sm:text-sm'}}) }}
+          {{ form_errors(registrationForm.birthDate, {'attr': {'class': 'text-red-600 text-sm'}}) }}
+        </div>
+      </div>
+      
+      <div>
+        {{ form_label(registrationForm.username, null, {'label_attr': {'class': 'block text-sm font-medium text-gray-900'}}) }}
+        <div class="mt-2">
+          {{ form_widget(registrationForm.username, {'attr': {'class': 'border-2 block w-full rounded-md bg-white px-3 py-2 text-base text-gray-900 outline-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:outline-indigo-600 sm:text-sm'}}) }}
+          {{ form_errors(registrationForm.username, {'attr': {'class': 'text-red-600 text-sm'}}) }}
+        </div>
+      </div>
+      
+      <div>
+        {{ form_label(registrationForm.plainPassword, 'Password', {'label_attr': {'class': 'block text-sm font-medium text-gray-900'}}) }}
+        <div class="mt-2">
+          {{ form_widget(registrationForm.plainPassword, {'attr': {'type': 'password', 'class': 'border-2 block w-full rounded-md bg-white px-3 py-2 text-base text-gray-900 outline-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:outline-indigo-600 sm:text-sm'}}) }}
+          {{ form_errors(registrationForm.plainPassword, {'attr': {'class': 'text-red-600 text-sm'}}) }}
+        </div>
+      </div>
+      
+      <div class="flex items-center">
+        {{ form_widget(registrationForm.agreeTerms, {'attr': {'class': 'border-2 h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600'}}) }}
+        <label for="{{ registrationForm.agreeTerms.vars.id }}" class="ml-2 block text-sm text-gray-900">
+          J'accepte <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">les conditions et termes</a>
+        </label>
+      </div>
+      {{ form_errors(registrationForm.agreeTerms, {'attr': {'class': 'text-red-600 text-sm'}}) }}
+      
+      <div>
+        <button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+          S'inscrire
+        </button>
+      </div>
     {{ form_end(registrationForm) }}
+    </div>
+
+    <p class="mt-10 text-center text-sm text-gray-500">
+      Vous êtes déjà membre ?
+      <a href="{{ path('app_login') }}" class="font-semibold text-indigo-600 hover:text-indigo-500">Se connecter</a>
+    </p>
+  </div>
+</div>
 {% endblock %}
