--- a/templates/programme/index.html.twig
+++ b/templates/programme/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <h1>Programme index</h1>
-
+    {# {% include 'parts/programme/programme-card.html.twig' %} #}
     <table class="table">
         <thead>
             <tr>
