--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -37,11 +37,11 @@
                                 <input id="remember" name="_remember_me" aria-describedby="remember" type="checkbox" class="w-4 h-4 mr-1 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300">Se souvenir
                             </div>
                         </div>
-                        <a href="#" class="text-sm font-medium text-primary-600 hover:underline">Mot de passe oublié ?</a>
+                        <a href="{{ path('app_forgot_password_request') }}" class="text-sm font-medium text-primary-600 hover:underline">Mot de passe oublié ?</a>
                     </div>
                     <button type="submit" class="w-full text-white bg-indigo-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Sign in</button>
                     <p class="text-sm font-light text-gray-500 ">
-                        Vous n'avez pas encore de compte ? <a href="#" class="font-medium text-primary-600 hover:underline">Inscrivez-vous</a>
+                        Vous n'avez pas encore de compte ? <a href="{{ path('app_register') }}" class="font-medium text-primary-600 hover:underline">Inscrivez-vous</a>
                     </p>
                 </form>
             </div>
