--- a/templates/abonnement/index.html.twig
+++ b/templates/abonnement/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <h1>Abonnement index</h1>
-
+{% if is_granted('ROLE_ADMIN') %}
     <table class="table">
         <thead>
             <tr>
@@ -40,4 +40,5 @@
     </table>
 
     <a href="{{ path('app_abonnement_new') }}">Create new</a>
+{% endif %}
 {% endblock %}
