--- a/templates/commentaire/index.html.twig
+++ b/templates/commentaire/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Commentaire index{% endblock %}
 
 {% block body %}
+{% if is_granted('ROLE_ADMIN') %}
     <h1>Commentaire index</h1>
 
     <table class="table">
@@ -34,4 +35,5 @@
     </table>
 
     <a href="{{ path('app_commentaire_new') }}">Create new</a>
+{% endif %}
 {% endblock %}
