--- a/templates/challenge/index.html.twig
+++ b/templates/challenge/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Challenge index{% endblock %}
 
 {% block body %}
+{% if is_granted('ROLE_ADMIN') %}
     <h1>Challenge index</h1>
 
     <table class="table">
@@ -38,4 +39,5 @@
     </table>
 
     <a href="{{ path('app_challenge_new') }}">Create new</a>
+{% endif %}
 {% endblock %}
