--- a/templates/note/index.html.twig
+++ b/templates/note/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Note index{% endblock %}
 
 {% block body %}
+{% if is_granted('ROLE_ADMIN') %}
     <h1>Note index</h1>
 
     <table class="table">
@@ -34,4 +35,5 @@
     </table>
 
     <a href="{{ path('app_note_new') }}">Create new</a>
+{% endif %}
 {% endblock %}
