--- a/templates/upload/index.html.twig
+++ b/templates/upload/index.html.twig
@@ -7,20 +7,20 @@
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
-
-{% for upload in uploads %}
-    <a href="{{ upload.id }}">
-        <div class="w-72 mx-7 rounded-lg bg-zinc-900 text-white px-12 py-4">
-            <img src="{{ upload.url }}" class="h-7 w-16" alt="...">
-            <div>
+{% if is_granted('ROLE_ADMIN') %}
+    {% for upload in uploads %}
+        <a href="{{ upload.id }}">
+            <div class="w-72 mx-7 rounded-lg bg-zinc-900 text-white px-12 py-4">
+                <img src="{{ upload.url }}" class="h-7 w-16" alt="...">
                 <div>
-                    <h5 class="card-title">{{ upload.url }}</h5>
+                    <div>
+                        <h5 class="card-title">{{ upload.url }}</h5>
+                    </div>
                 </div>
             </div>
-        </div>
-    </a>  
-{% endfor %}
-
+        </a>  
+    {% endfor %}
+{% endif %}
 <script>
     document.querySelector('form').addEventListener('submit', function() {
 
