list video done

--- a/templates/video/index.html.twig
+++ b/templates/video/index.html.twig
@@ -5,7 +5,7 @@
     <div class="overflow-auto flex no-scrollbar">
     {% for video in videos %}
         <a href="{{ path('app_video_show', {'id': video.id}) }}">
-            <div class="w-72 mx-7 rounded-lg bg-zinc-900 text-white px-12 py-4">
+            <div class="w-72 mx-7 rounded-lg bg-slate-100 text-white px-12 py-4">
                 <img src="{{ video.image }}" class="h-7 w-16" alt="...">
                 <div>
                     <div>
