--- a/templates/video/show.html.twig
+++ b/templates/video/show.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="flex">
-    <div class="w-4/6 bg-black" value="container video">
+    <div class="w-4/6 bg-slate-100" value="container video">
         <div value="video">
             <div class="m-5 rounded-lg bg-white" value="video">
             <video controls class="w-full h-96" value="video">
