--- a/templates/parts/video/list-video.html.twig
+++ b/templates/parts/video/list-video.html.twig
@@ -1,16 +1,34 @@
-<div class="max-w-full">
-    <div class="overflow-auto flex no-scrollbar">
+
+<div class="max-w-7xl mx-auto">
+    <div class="overflow-auto flex no-scrollbar m-6">
     {% for video in videos %}
-        <a href="{{ path('app_video_show', {'id': video.id}) }}">
-            <div class="w-72 mx-7 rounded-lg bg-zinc-900 text-white px-12 py-4">
-                <img src="{{ video.image }}" class="h-7 w-16" alt="...">
-                <div>
+        <a class="py-6 first:pl-2" href="{{ path('app_video_show', {'id': video.id}) }}">
+            <div class="w-96 first:ml-0 mx-6 rounded-lg text-zinc px-4 py-4 shadow-lg">
+                <img class="aspect-3/2 w-full rounded-2xl object-cover h-32" src="{{ video.image ? asset('uploads/image/' ~ video.image ) : asset('images/default/defaultImg.png')}}" alt="image {{video.title}}">
+                <div class="mt-6">
                     <div>
                         <h5 class="card-title">{{ video.title }}</h5>
                     </div>
                     <div class="flex gap-4">
-                        <p class="card-text">{{ video.level.value }}</p>
-                        <p class="card-theme">{{ video.theme }}</p>
+                        {% if video.level.value == 'Débutant' %}
+                        <span class="inline-flex items-center rounded-md bg-green-100 px-2 py-1 text-xs font-medium text-green-700">{{video.level.value}}</span>
+                        {% elseif video.level.value == 'Intermédiare' %}
+                        <span class="inline-flex items-center rounded-md bg-yellow-100 px-2 py-1 text-xs font-medium text-yellow-800">{{video.level.value}}</span>
+                        {% elseif video.level.value == "Avancé" %}
+                        <span class="inline-flex items-center rounded-md bg-red-100 px-2 py-1 text-xs font-medium text-red-700">{{video.level.value}}</span>
+                        {% endif %}
+
+                        {% if video.theme == 'Haut du corps' %}
+                        <span class="inline-flex items-center rounded-md bg-blue-100 px-2 py-1 text-xs font-medium text-blue-700">{{video.theme}}</span>
+                        {% elseif video.theme == 'Bas du corps' %}
+                        <span class="inline-flex items-center rounded-md bg-pink-100 px-2 py-1 text-xs font-medium text-pink-700">{{video.theme}}</span>
+                        {% elseif video.theme == 'Corps complet' %}
+                        <span class="inline-flex items-center rounded-md bg-gray-100 px-2 py-1 text-xs font-medium text-gray-600">{{video.theme}}</span>
+                        {% elseif video.theme == 'Cardio' %}
+                        <span class="inline-flex items-center rounded-md bg-gray-100 px-2 py-1 text-xs font-medium text-gray-600">{{video.theme}}</span>
+                        {% elseif video.theme == 'Hit' %}
+                        <span class="inline-flex items-center rounded-md bg-purple-100 px-2 py-1 text-xs font-medium text-purple-700">{{video.theme}}</span>
+                        {% endif %}
                     </div>
                 </div>
             </div>
