--- a/templates/challenge/index.html.twig
+++ b/templates/challenge/index.html.twig
@@ -1,8 +1,27 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Challenge index{% endblock %}
+{% block title %}Défis de Sport à la Maison{% endblock %}
 
 {% block body %}
+  <div class="container mx-auto p-4">
+    <h1 class="text-3xl font-bold mb-4">Générer des défis sportifs</h1>
+
+    {{ form_start(form) }}
+      <div class="mb-4">
+        {{ form_row(form.niveau) }}
+      </div>
+      <div class="mb-4">
+        <button type="submit" class="btn btn-primary">{{ form_label(form.submit) }}</button>
+      </div>
+    {{ form_end(form) }}
+
+    {% if challenges %}
+      <div class="mt-8 p-4 bg-gray-100 rounded shadow">
+        <h2 class="text-2xl font-bold mb-2">Voici vos défis :</h2>
+        <p class="text-lg whitespace-pre-line">{{ challenges }}</p>
+      </div>
+    {% endif %}
+  </div>
 {% if is_granted('ROLE_ADMIN') %}
     <h1>Challenge index</h1>
 
