--- a/templates/video/index.html.twig
+++ b/templates/video/index.html.twig
@@ -1,11 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+{{ include('parts/video/big-video-carousel.html.twig') }}
 <div class="max-w-full">
     <div class="overflow-auto flex no-scrollbar">
     {% for video in videos %}
         <a href="{{ path('app_video_show', {'id': video.id}) }}">
-            <div class="w-72 mx-7 rounded-lg bg-slate-100 text-white px-12 py-4">
+            <div class="w-72 mx-7 rounded-lg bg-white text-white px-12 py-4">
                 <img src="{{ video.image }}" class="h-7 w-16" alt="...">
                 <div>
                     <div>
