--- a/templates/video/show.html.twig
+++ b/templates/video/show.html.twig
@@ -4,49 +4,94 @@
 
 {% block body %}
 <div class="flex">
-    <div class="w-4/6 bg-slate-100" value="container video">
+    <div class="w-4/6" value="container video">
         <div value="video">
             <div class="m-5 rounded-lg bg-white" value="video">
             <video controls class="w-full h-96" value="video">
                 <source src="{{ asset('uploads/video/' ~ video.fichierVideo) }}" type="video/mp4">
                 Your browser does not support the video tag.
             </div>
-            <div class="text-white mx-5" value="info">
-                <div value="titre">
-                    <h2 class="text-2xl font-bold">{{ video.title }}</h2>
-                </div>
-                <div value="theme et level">
-                    <div class="my-1" value="theme">
-                        <p class="text-base px-5 py-1 rounded-full bg-white w-fit text-black">{{ video.theme }}</p>
+            <div class="mx-7 mb-4 flex justify-between" value="info">
+                <div>
+                    <div value="titre">
+                        <h2 class="text-2xl font-bold text-black">{{ video.title }}</h2>
                     </div>
-                    <div value="level">
-                    {% if video.level.value == "Débutant" %}
-                        <p class="text-base px-5 py-1 rounded-full bg-green-200 w-fit text-black">{{ video.level.value }}</p>
-                    {% elseif video.level.value == "Intermédiare" %}
-                        <p class="text-base px-5 py-1 rounded-full bg-orange-200 w-fit text-black">{{ video.level.value }}</p>
-                    {% elseif video.level.value == "Avancé" %}
-                        <p class="text-base px-5 py-1 rounded-full bg-red-200 w-fit text-black">{{ video.level.value }}</p>
-                    {% endif %}
+                    <div value="theme et level">
+                        <div class="my-1" value="theme">
+                            {% if video.theme == 'Haut du corps' %}
+                            <span class="inline-flex items-center rounded-md bg-blue-100 px-2 py-1 text-xs font-medium text-blue-700">{{video.theme}}</span>
+                            {% elseif video.theme == 'Bas du corps' %}
+                            <span class="inline-flex items-center rounded-md bg-pink-100 px-2 py-1 text-xs font-medium text-pink-700">{{video.theme}}</span>
+                            {% elseif video.theme == 'Corps complet' %}
+                            <span class="inline-flex items-center rounded-md bg-gray-100 px-2 py-1 text-xs font-medium text-gray-600">{{video.theme}}</span>
+                            {% elseif video.theme == 'Cardio' %}
+                            <span class="inline-flex items-center rounded-md bg-gray-100 px-2 py-1 text-xs font-medium text-gray-600">{{video.theme}}</span>
+                            {% elseif video.theme == 'Hit' %}
+                            <span class="inline-flex items-center rounded-md bg-purple-100 px-2 py-1 text-xs font-medium text-purple-700">{{video.theme}}</span>
+                            {% endif %}
+                        </div>
+                        <div value="level">
+                            {% if video.level.value == 'Débutant' %}
+                            <span class="inline-flex items-center rounded-md bg-green-100 px-2 py-1 text-xs font-medium text-green-700">{{video.level.value}}</span>
+                            {% elseif video.level.value == 'Intermédiare' %}
+                            <span class="inline-flex items-center rounded-md bg-yellow-100 px-2 py-1 text-xs font-medium text-yellow-800">{{video.level.value}}</span>
+                            {% elseif video.level.value == "Avancé" %}
+                            <span class="inline-flex items-center rounded-md bg-red-100 px-2 py-1 text-xs font-medium text-red-700">{{video.level.value}}</span>
+                            {% endif %}
+                        </div>
+                    </div>                    
+                </div>
+                <div>
+                    <div value="vue">
+                        <p class="text-base text-black font-bold">{{ video.view }}<sup class="ml-1 font-light">vues</sup></p>
+                    </div>
+                    <div value="note">
+                    {% include 'parts/conditions/videoNote.html.twig' %}
                     </div>
                 </div>
-                <div value="description">
-                    <p class="text-base">{{ video.description }}</p>
+            </div>
+            <div class="mx-7">
+                <div class="pr-10 font-bold" value="description">
+                    <p class="text-event text-base text-black truncate">{{ video.description }}</p>
                 </div>
             </div>
         </div>
         <div value="commentaire">
         </div>
     </div>
-    <div class="w-2/6 h-10 bg-red-500" value="container suggestion">
+    <div class="w-2/6 h-screen" value="container suggestion">
         <div>
             <div value="titre suggestion">
+                <h2 class="text-2xl text-center">D'autres vidéo avec le thème <br> <span class="font-bold underline">{{ video.theme }}</span></h2>
             </div>
             <div value="suggestion">
+                {% for video in videoSame %}
+                    <a href="{{ path('app_video_show', {'id': video.id}) }}">
+                        <div class="flex m-2 first:mt-6">
+                            <div class="w-48 mr-2">
+                                <img class="rounded-lg h-24 w-full bg-center object-cover" src="{{ asset('uploads/image/' ~ video.image )}}">
+                            </div>
+                            <div>
+                                <div>
+                                    <h3>{{ video.title}}</h3>
+                                </div>
+                                <div class="flex gap-2">
+                                    {% include 'parts/conditions/videoTheme.html.twig' %}
+                                    {% include 'parts/conditions/videoLevel.html.twig' %}
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                {% else %}
+                    <div>
+                        <p>Aucune vidéo du même thème</p>
+                    </div>
+                {% endfor %}
             </div>
         </div>
     </div>
 </div>
-    <table class="table">
+    {# <table class="table">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -95,5 +140,5 @@
 
     <a href="{{ path('app_video_edit', {'id': video.id}) }}">edit</a>
 
-    {{ include('video/_delete_form.html.twig') }}
+    {{ include('video/_delete_form.html.twig') }} #}
 {% endblock %}
